# Karrot

./: .travis.yml  CMakeLists.txt  HEAD.json  README.md  api.docurium  coveralls.in  project.json
CMake/: FindAPR.cmake  FindLibGit2.cmake  FindLibYAML.cmake  FindSVN.cmake  FindVala.cmake  FindXSLTPROC.cmake  Findlibproxy.cmake  i586-mingw32msvc-gcc.cmake  i686-w64-mingw32.cmake
bindings/vala/: karrot.vapi
contrib/: CMakeLists.txt
contrib/rapidxml/: CMakeLists.txt
contrib/yaml-cpp/: CMakeLists.txt
doc/: CMakeLists.txt  main.qbk  project_feed.rnc  schema.rnc
example/: CMakeLists.txt  karrot.cpp  karrot.hpp
include/: karrot.h  karrot.hpp
include/karrot/: deliverable.hpp  dictionary.hpp  driver.hpp  engine.hpp  export.hpp  identification.hpp  implementation.hpp  quark.hpp  query.hpp  solve.hpp  spec.hpp  string.hpp  string_pool.hpp  url.hpp
libs/: CMakeLists.txt
libs/drivers/: CMakeLists.txt
libs/drivers/include/karrot/: archive.hpp  driver.hpp  git.hpp  subversion.hpp
libs/drivers/src/: archive.cpp  git.cpp  subversion.cpp
libs/karrot/: CMakeLists.txt
libs/karrot/include/karrot/: engine.hpp  module.hpp
libs/karrot/src/: CMakeLists.txt  dependencies.cpp  dependencies.hpp  engine.cpp  feed_parser.cpp  feed_parser.hpp  hash.hpp  implementation.cpp  implementation.hpp  package.hpp  query.hpp  solve.cpp  solve.hpp  types.hpp  url.hpp  url_win32.cpp  vercmp.cpp  vercmp.hpp
libs/karrot/src/minisat/: solver.cpp
libs/karrot/test/: CMakeLists.txt  query.cpp  sat.cpp  unsat.cpp
libs/xml/: CMakeLists.txt
libs/xml/include/: xml_reader.hpp
libs/xml/src/: xml_re2c.in.hpp  xml_reader.cpp
src/: CMakeLists.txt  cache.cpp  cache.hpp  closures.hpp  context.cpp  database.hpp  delegate.hpp  dependencies.cpp  dependencies.hpp  dictionary.cpp  dictionary.hpp  driver.cpp  driver.hpp  engine.cpp  engine.hpp  error.cpp  error.hpp  feed_cache.cpp  feed_cache.hpp  feed_parser.cpp  feed_parser.hpp  feed_queue.hpp  graph.cpp  graph.hpp  hash.hpp  implementation.cpp  implementation.hpp  implementation2.hpp  karrot.rc  log.hpp  main.cpp  package.hpp  package_handler.hpp  print.hpp  quark.cpp  quark.hpp  quark_impl.hpp  quark_internal.hpp  query.cpp  query.hpp  (+19 more)
src/minisat/: Global.h  Solver.cpp  Solver.h  SolverTypes.h  VarOrder.h  global.hpp  solver.cpp  solver.hpp  solver_types.hpp  var_order.hpp
src/windows/: library.hpp
test/: CMakeLists.txt  coveralls.in  quark.cpp  query.cpp  sat.cpp  spec.cpp  string_pool.cpp  unsat.cpp  url.cpp  variants.cpp  vercmp.cpp  version.cpp
tool/: CMakeLists.txt  archive.cpp  archive.hpp  cache.cpp  cache.hpp  cmake.hpp  dependencies.cpp  dependencies.hpp  driver.cpp  driver.hpp  engine.hpp  feed_parser.cpp  feed_parser.hpp  feed_queue.hpp  git.cpp  git.hpp  graph.cpp  graph.hpp  karrot.rc  main.cpp  md5.h  package.hpp  packagekit.cpp  packagekit.hpp  packagekit.vala  packagekit_g.vala  subversion.cpp  subversion.hpp  url.cpp  variants.cpp  variants.cpp.in  variants.hpp  version.h.in  xml_reader.cpp  yaml_writer.cpp  yaml_writer.hpp
tools/: CMakeLists.txt  archive.cpp  archive.hpp  git.cpp  git.hpp  main.cpp  subversion.cpp  subversion.hpp
